@@ -17,11 +17,9 @@ use strict;
 use warnings;
 
 package EBox::OpenChange::Model::OpenChangeUser;
+use base 'EBox::Model::DataForm';
 
 use EBox::Gettext;
-use EBox::Validate qw(:all);
-
-use base 'EBox::Model::DataForm';
 
 sub _table
 {
@@ -32,7 +30,8 @@ sub _table
             fieldName     => 'enabled',
             printableName => __('Enable OpenChange account'),
             editable      => 1,
-            defaultValue  => 1),
+            defaultValue  => 1,
+           ),
     ];
 
     my $dataTable = {
@@ -42,7 +41,7 @@ sub _table
         modelDomain        => 'OpenChange',
         defaultActions     => ['add', 'del', 'editField', 'changeView' ],
         tableDescription   => $tableDescription,
-        # FIXME help => ''
+        help => __('This affects both new users and groups with mail account in a managed mail domain')
     };
 
     return $dataTable;
