@@ -1,3 +1,5 @@
+HEAD
+	+ Now groups can be provisioned for OpenChange
 4.1.2
 	+ Configuration for openchange notifications with dovecot plugin
 4.1.1
